# ToDo-App

./: CMakeLists.txt  LICENSE  todoapp.deb
src/: Info.plist  MyApp.cpp  MyApp.h  MyFrame.cpp  MyFrame.h  TaskDatabase.cpp  TaskDatabase.h  main.cpp
todoapp/DEBIAN/: control
